# agni-guard-firmware-edge

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
components/bme280/: CMakeLists.txt
components/bme280/inc/: bme280.h
components/bme280/src/: bme280.c
components/bme680_bsec/: CMakeLists.txt
components/bme680_bsec/inc/: bme680_bsec.h  bme68x_hal.h
components/bme680_bsec/src/: bme680_bsec.c  bme68x_hal.c
components/ds2782/: CMakeLists.txt
components/ds2782/inc/: ds2782.h
components/ds2782/src/: ds2782.c
components/nvs_config/: CMakeLists.txt
components/nvs_config/inc/: nvs_config.h
components/nvs_config/src/: nvs_config.c
components/pms7003/: CMakeLists.txt
components/pms7003/inc/: pms7003.h
components/pms7003/src/: pms7003.c
components/power_manager/: CMakeLists.txt
components/power_manager/inc/: power_manager.h
components/power_manager/src/: power_manager.c
components/sd_logger/: CMakeLists.txt
components/sd_logger/inc/: sd_logger.h
components/sd_logger/src/: sd_logger.c
components/sleep_manager/: CMakeLists.txt
components/sleep_manager/inc/: sleep_manager.h
components/sleep_manager/src/: sleep_manager.c
components/sx1278/: CMakeLists.txt
components/sx1278/inc/: sx1278.h
components/sx1278/src/: sx1278.c
main/: CMakeLists.txt  calibration.c  calibration.h  edge_node.c  lora_protocol.c  lora_protocol.h  sleep_manager.c  sleep_manager.h
